--- a/ios/Podfile
+++ b/ios/Podfile
@@ -8,4 +8,5 @@ target 'caradviseui' do
     'RCTWebSocket'
   ]
   pod 'react-native-braintree', :path => '../node_modules/react-native-braintree'
+  pod 'CodePush', :path => '../node_modules/react-native-code-push'
 end
