--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^0.14.8",
     "react-native": "^0.25.1",
     "react-native-braintree": "^0.5.0",
-    "react-native-code-push": "^1.11.0-beta"
+    "react-native-code-push": "^1.11.0-beta",
+    "react-native-loading-spinner-overlay": "^0.1.0"
   }
 }
