--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "react-native": "^0.25.1",
     "react-native-braintree": "^0.5.0",
     "react-native-code-push": "^1.11.0-beta",
-    "react-native-loading-spinner-overlay": "^0.1.0"
+    "react-native-loading-spinner-overlay": "^0.1.0",
+    "react-redux": "^4.4.5",
+    "redux": "^3.5.2",
+    "redux-thunk": "^2.1.0"
   }
 }
