--- a/ios/caradviseui/Info.plist
+++ b/ios/caradviseui/Info.plist
@@ -2,10 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>branch_app_domain</key>
-	<string>caradvise.app.link</string>
-	<key>branch_key</key>
-	<string>key_live_pej4S6kmUT4wMtxksMnh8lclBwhMMGMl</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
@@ -19,7 +15,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0.0</string>
+	<string>1.0.1</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleURLTypes</key>
@@ -59,6 +55,10 @@
 		<string>RobotoCondensed-Light.ttf</string>
 		<string>RobotoCondensed-Bold.ttf</string>
 	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -75,5 +75,9 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>branch_app_domain</key>
+	<string>caradvise.app.link</string>
+	<key>branch_key</key>
+	<string>key_live_pej4S6kmUT4wMtxksMnh8lclBwhMMGMl</string>
 </dict>
 </plist>
