--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-native": "^0.25.1",
     "react-native-braintree": "^0.5.0",
     "react-native-branch": "^0.1.1",
+    "react-native-checkbox": "^1.0.13",
     "react-native-code-push": "^1.11.0-beta",
     "react-native-loading-spinner-overlay": "^0.1.0",
     "react-redux": "^4.4.5",
