--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -14,7 +14,8 @@
       android:allowBackup="true"
       android:label="@string/app_name"
       android:icon="@mipmap/ic_launcher"
-      android:theme="@style/AppTheme">
+      android:theme="@style/AppTheme"
+      android:name="io.branch.referral.BranchApp">
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
@@ -23,8 +24,19 @@
             <action android:name="android.intent.action.MAIN" />
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
+        <intent-filter>
+        	<data android:scheme="caradvise" android:host="open" />
+        	<action android:name="android.intent.action.VIEW" />
+        	<category android:name="android.intent.category.DEFAULT" />
+        	<category android:name="android.intent.category.BROWSABLE" />
+        </intent-filter>
       </activity>
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
+      <meta-data android:name="io.branch.sdk.BranchKey" android:value="key_live_pej4S6kmUT4wMtxksMnh8lclBwhMMGMl" />
+      <receiver android:name="io.branch.referral.InstallListener" android:exported="true">
+      	<intent-filter>
+      		<action android:name="com.android.vending.INSTALL_REFERRER" />
+      	</intent-filter>
+      </receiver>
     </application>
-
 </manifest>
