--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -132,6 +132,7 @@ dependencies {
     compile 'com.google.android.gms:play-services-gcm:+'
     compile 'com.google.android.gms:play-services-analytics:+'
     compile "com.google.android.gms:play-services-location:+"
+    compile 'com.braintreepayments.api:braintree:2.+'
 }
 
 // Run this once to be able to run the application with BUCK
