--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -19,13 +19,16 @@
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
-        android:configChanges="keyboard|keyboardHidden|orientation|screenSize">
+        android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
+        android:launchMode="singleTask">
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
         <intent-filter>
-        	<data android:scheme="caradvise" android:host="open" />
+          <data android:scheme="caradvise"/>
+          <data android:host="*"/>
+          <data android:pathPattern=".*"/>
         	<action android:name="android.intent.action.VIEW" />
         	<category android:name="android.intent.category.DEFAULT" />
         	<category android:name="android.intent.category.BROWSABLE" />
