Added build settings

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -18,3 +18,7 @@
 # org.gradle.parallel=true
 
 android.useDeprecatedNdk=true
+CARADVISE_RELEASE_STORE_FILE=keystore.keystore
+CARADVISE_RELEASE_KEY_ALIAS=caradvise
+CARADVISE_RELEASE_STORE_PASSWORD=caradvise
+CARADVISE_RELEASE_KEY_PASSWORD=caradvise
