--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -93,6 +93,14 @@ android {
             abiFilters "armeabi-v7a", "x86"
         }
     }
+    signingConfigs {
+        release {
+            storeFile file('keystore.keystore')
+            storePassword 'caradvise'
+            keyAlias 'caradvise'
+            keyPassword 'caradvise'
+        }
+    }
     splits {
         abi {
             reset()
@@ -105,6 +113,7 @@ android {
         release {
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+            signingConfig signingConfigs.release
         }
     }
     // applicationVariants are e.g. debug, release
