--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native-checkbox": "^1.0.13",
     "react-native-code-push": "^1.11.0-beta",
     "react-native-loading-spinner-overlay": "^0.1.0",
+    "react-native-swiper": "^1.4.6",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
     "redux-thunk": "^2.1.0"
