--- a/ios/caradviseui/Info.plist
+++ b/ios/caradviseui/Info.plist
@@ -15,7 +15,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0.3</string>
+	<string>1.0.4</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleURLTypes</key>
@@ -28,13 +28,26 @@
 			<key>CFBundleURLSchemes</key>
 			<array>
 				<string>caradvise</string>
+				<string>fb1711778189069028</string>
+			</array>
+		</dict>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>com.caradvise.caradvise.payments</string>
 			</array>
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>2</string>
 	<key>CodePushDeploymentKey</key>
 	<string>vBEhXUki5-smzPpDObJHi8EkiOtQ4JbaYvpGb</string>
+	<key>FacebookAppID</key>
+	<string>1711778189069028</string>
+	<key>FacebookDisplayName</key>
+	<string>CarAdvise</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>NSAppTransportSecurity</key>
