--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -87,8 +87,8 @@ android {
                                 onesignal_google_project_number: "543239794108"]
         minSdkVersion 16
         targetSdkVersion 22
-        versionCode 2
-        versionName "1.0.1"
+        versionCode 3
+        versionName "1.0.2"
         ndk {
             abiFilters "armeabi-v7a", "x86"
         }
@@ -135,6 +135,7 @@ dependencies {
     compile project(':react-native-branch')
     compile project(':react-native-code-push')
     compile fileTree(dir: "libs", include: ["*.jar"])
+    compile 'com.android.support:support-v4:23.0'
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
     compile 'com.onesignal:OneSignal:2.+@aar'
@@ -142,6 +143,7 @@ dependencies {
     compile 'com.google.android.gms:play-services-analytics:+'
     compile "com.google.android.gms:play-services-location:+"
     compile 'com.braintreepayments.api:braintree:2.+'
+    compile 'com.facebook.android:facebook-android-sdk:[4,5)'
 }
 
 // Run this once to be able to run the application with BUCK
