--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -132,6 +132,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-maps')
     compile project(':react-native-branch')
     compile project(':react-native-code-push')
     compile fileTree(dir: "libs", include: ["*.jar"])
