--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -132,7 +132,6 @@ android {
 }
 
 dependencies {
-    compile project(':react-native-maps')
     compile project(':react-native-branch')
     compile project(':react-native-code-push')
     compile fileTree(dir: "libs", include: ["*.jar"])
@@ -143,8 +142,10 @@ dependencies {
     compile 'com.google.android.gms:play-services-gcm:+'
     compile 'com.google.android.gms:play-services-analytics:+'
     compile "com.google.android.gms:play-services-location:+"
+    compile "com.google.android.gms:play-services-maps:+"
     compile 'com.braintreepayments.api:braintree:2.+'
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
+    compile 'com.airbnb.android:react-native-maps:0.5.0'
 }
 
 // Run this once to be able to run the application with BUCK
