--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -38,6 +38,7 @@
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
       <meta-data android:name="io.branch.sdk.BranchKey" android:value="key_live_pej4S6kmUT4wMtxksMnh8lclBwhMMGMl" />
       <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
+      <meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyDiF1_3vUUOG7U3RgsB33DKegwF_hhQdec"/>
       <receiver android:name="io.branch.referral.InstallListener" android:exported="true">
       	<intent-filter>
       		<action android:name="com.android.vending.INSTALL_REFERRER" />
