--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "react-native-datepicker": "^1.3.2",
     "react-native-loading-spinner-overlay": "^0.1.0",
     "react-native-maps": "^0.7.1",
+    "react-native-rating-star": "^0.2.1",
+    "react-native-star-rating": "^1.0.6",
     "react-native-swiper": "^1.4.6",
+    "react-native-vector-icons": "^2.1.0",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
     "redux-thunk": "^2.1.0"
