--- a/ios/caradviseui/Info.plist
+++ b/ios/caradviseui/Info.plist
@@ -56,7 +56,7 @@
 		<true/>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string>Your location will be used to show you shops in your area.</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Roboto-Regular.ttf</string>
