--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,11 +1,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.caradviseui"
-    android:versionCode="4"
-    android:versionName="1.0.3">
+    android:versionCode="7"
+    android:versionName="1.0.6">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW"/>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-feature android:name="android.hardware.network" android:required="false" />
+    <uses-feature android:name="android.hardware.location" android:required="false" />
 
     <uses-sdk
         android:minSdkVersion="16"
