--- a/ios/caradviseui.xcodeproj/xcshareddata/xcschemes/caradviseui.xcscheme
+++ b/ios/caradviseui.xcodeproj/xcshareddata/xcschemes/caradviseui.xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "TestApp.app"
+               BuildableName = "CarAdvise.app"
                BlueprintName = "caradviseui"
                ReferencedContainer = "container:caradviseui.xcodeproj">
             </BuildableReference>
@@ -57,7 +57,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "TestApp.app"
+            BuildableName = "CarAdvise.app"
             BlueprintName = "caradviseui"
             ReferencedContainer = "container:caradviseui.xcodeproj">
          </BuildableReference>
@@ -80,7 +80,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "TestApp.app"
+            BuildableName = "CarAdvise.app"
             BlueprintName = "caradviseui"
             ReferencedContainer = "container:caradviseui.xcodeproj">
          </BuildableReference>
@@ -99,7 +99,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "TestApp.app"
+            BuildableName = "CarAdvise.app"
             BlueprintName = "caradviseui"
             ReferencedContainer = "container:caradviseui.xcodeproj">
          </BuildableReference>
